--- a/views/admin/admin_banner.ejs
+++ b/views/admin/admin_banner.ejs
@@ -1240,7 +1240,7 @@
                         
                         <!-- bottom-page -->
                         <div class="bottom-page">
-                            <div class="body-text">Copyright © 2025 <a href="">Blushelys</a>.
+                            <div class="body-text">Copyright © 2025 <a href="">Teraxo</a>.
                                 Design by Trivlogic Private Limited All rights reserved</div>
                         </div>
                         <!-- /bottom-page -->
