--- a/views/industry-footwear.ejs
+++ b/views/industry-footwear.ejs
@@ -103,7 +103,7 @@
                                
                                 </li>
                                 <li class="">
-                                    <a href="contact.html">Contact</a>
+                                    <a href="/contact">Contact</a>
                                   
                                 </li>
                             </ul>
@@ -114,7 +114,7 @@
                       
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-orange has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-orange has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -203,7 +203,7 @@
                                
                                 </li>
                                 <li >
-                                    <a href="contact.html">Contact</a>
+                                    <a href="/contact">Contact</a>
                                 
                                 </li>
                             </ul>
@@ -214,7 +214,7 @@
                     
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -698,7 +698,7 @@
                                     <h3 class="rs-services-details-title mb-30">Ready to Optimize Your Footwear Production?</h3>
                                     <p class="mb-40">Contact our technical team for product recommendations, samples, or customized solutions for your specific manufacturing needs.</p>
                                     <div class="rs-services-details-btn">
-                                        <a class="rs-btn has-theme-light-green has-icon has-bg" href="contact.html">
+                                        <a class="rs-btn has-theme-light-green has-icon has-bg" href="tel:+918105077170">
                                             Request Technical Consultation
                                             <span class="icon-box">
                                                 <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
@@ -813,7 +813,7 @@
                                     <h3 class="sidebar-widget-title has-large has-border">Need Technical Support?</h3>
                                     <p class="mb-25">Our experts can help you choose the right adhesive for your specific footwear manufacturing needs.</p>
                                     <div class="sidebar-widget-btn">
-                                        <a class="rs-btn has-theme-light-green has-icon has-bg" href="contact.html">
+                                        <a class="rs-btn has-theme-light-green has-icon has-bg" href="/contact">
                                             Contact Our Experts
                                             <span class="icon-box">
                                                 <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
@@ -828,30 +828,6 @@
                                 </div>
                             </div>
 
-                            <!-- Download Resources -->
-                            <div class="sidebar-widget widget-download mb-30">
-                                <h5 class="mb-25 sidebar-widget-title">Industry Resources</h5>
-                                <ul>
-                                    <li>
-                                        <a href="#">
-                                            <div class="left">
-                                                <span><img src="/images/icon/docs.svg" alt="#"></span>
-                                                Footwear Application Guide
-                                            </div>
-                                            <span><img src="/images/icon/download-01.svg" alt="#"></span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="left">
-                                                <span><img src="/images/icon/pdf.svg" alt="#"></span>
-                                                Technical Specifications
-                                            </div>
-                                            <span><img src="/images/icon/download-02.svg" alt="#"></span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
 
                         </div>
                     </div>
@@ -864,116 +840,139 @@
     <!-- Body main wrapper end -->
 
     <!-- Footer -->
-    <footer class="footer-bg">
-        <div style="padding-bottom: 0!important;" class="rs-footer-area pb-0 rs-footer-two has-space has-theme-green has-bg-thumb">
-            <div class="rs-footer-top">
-                <div class="container">
-                    <div class="row g-5">
-                        <!-- ABOUT -->
-                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                            <div class="rs-footer-widget footer-2-col-1">
-                                <div class="rs-footer-widget-logo mb-25">
-                                    <a href="/">
-                                        <img src="/images/teraxo/logo.png" alt="Teraxo Logo">
-                                    </a>
-                                </div>
-                                <div class="rs-footer-widget-content">
-                                    <p class="rs-footer-widget-description text-white">
-                                        Teraxo provides strong, fast-curing instant adhesives for industrial and professional use.
-                                    </p>
-                                </div>
+  <footer class="footer-bg">
+    <div style="padding-bottom: 0!important;" class="rs-footer-area pb-0 rs-footer-two has-space has-theme-green has-bg-thumb">
+
+        <div class="rs-footer-top">
+            <div class="container" style="position: relative; z-index: 2;">
+                <div class="row g-5">
+
+                    <!-- ABOUT -->
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <div class="rs-footer-widget footer-2-col-1">
+                            <div class="rs-footer-widget-logo mb-25">
+                                <a href="/">
+                                    <img src="/images/teraxo/logo.png" alt="Teraxo Logo">
+                                </a>
+                            </div>
+
+                            <div class="rs-footer-widget-content">
+ <p class="rs-footer-widget-description text-white">
+    Teraxo provides strong, fast-curing instant adhesives for industrial and professional use.
+</p>
+
+
+                          
                             </div>
                         </div>
+                    </div>
 
-                        <!-- USEFUL LINKS -->
-                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                            <div class="rs-footer-widget footer-2-col-2">
-                                <h5 class="rs-footer-widget-title">Useful Links</h5>
-                                <div class="rs-footer-widget-content">
-                                    <div class="rs-footer-widget-links has-theme-green">
-                                        <ul>
+                    <!-- USEFUL LINKS -->
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <div class="rs-footer-widget footer-2-col-2">
+                            <h5 class="rs-footer-widget-title">Useful Links</h5>
+
+                            <div class="rs-footer-widget-content">
+                                <div class="rs-footer-widget-links has-theme-green">
+                                    <ul>
                                             <li><a href="/">Home</a></li>
-                                            <li><a href="company-overview.html">About Us</a></li>
-                                            <li><a href="products.html">Products</a></li>
-                                            <li><a href="industries.html">Industries</a></li>
-                                            <li><a href="blog.html">Blog</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-                                            <li><a href="terms.html">Terms of Use</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- ADDRESS -->
-                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                            <div class="rs-footer-widget footer-2-col-3">
-                                <h5 class="rs-footer-widget-title">Office Address</h5>
-                                <div class="rs-footer-widget-content">
-                                    <div class="rs-footer-widget-meta">
-                                        <div class="rs-footer-widget-address">
-                                            <a target="_blank" class="text-white" href="https://maps.google.com">
-                                                Teraxo Adhesives<br>
-                                                Chennai, Tamil Nadu<br>
-                                                India
-                                            </a>
-                                        </div>
-                                        <h5 class="rs-footer-widget-title mt-20">Email Address</h5>
-                                        <div class="rs-footer-widget-email">
-                                            <a class="text-white" href="mailto:business@teraxo.co.in">
-                                                business@teraxo.co.in
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- CONTACT + SOCIAL -->
-                        <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
-                            <div class="rs-footer-widget footer-2-col-4">
-                                <h5 class="rs-footer-widget-title">Phone Number</h5>
-                                <div class="rs-footer-widget-content">
-                                    <div class="rs-footer-widget-contact-info">
-                                        <div class="rs-footer-widget-number">
-                                            <span><a class="text-white" href="tel:+919876543210">+91 98765 43210</a></span>
-                                            <span><a class="text-white" href="tel:+919556677889">+91 95566 77889</a></span>
-                                        </div>
-                                    </div>
-                                    <h5 class="rs-footer-widget-title mt-20">Follow Us</h5>
-                                    <div class="rs-footer-widget-social">
-                                        <div class="rs-theme-social has-theme-green">
-                                            <a href="#"><i class="ri-facebook-fill"></i></a>
-                                            <a href="#"><i class="ri-instagram-line"></i></a>
-                                            <a href="#"><i class="ri-linkedin-fill"></i></a>
-                                            <a href="#"><i class="ri-youtube-line"></i></a>
-                                        </div>
-                                    </div>
+                                        <li><a href="/company_overview">About Us</a></li>
+                                        <li><a href="/products">Products</a></li>
+                                        <li><a href="industries.html">Industries</a></li>
+                                        <li><a href="/blogs">Blog</a></li>
+                                        <li><a href="/contact">Contact</a></li>
+                                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                        <li><a href="terms.html">Terms of Use</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <!-- COPYRIGHT -->
-            <div class="rs-footer-copyright-area rs-copyright-one has-theme-green">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-xl-12">
-                            <div class="rs-footer-copyright has-theme-green text-center">
-                                <p class="underline">
-                                    © <span id="year">2025</span> Teraxo Adhesives. All Rights Reserved
-                                    | Developed by <a href="https://trivlogic.com/" class="text-white">Trivlogic Private Limited</a>
-                                </p>
+                    <!-- ADDRESS -->
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <div class="rs-footer-widget footer-2-col-3">
+                            <h5 class="rs-footer-widget-title">Office Address</h5>
+
+                            <div class="rs-footer-widget-content">
+                                <div class="rs-footer-widget-meta">
+
+                                    <div class="rs-footer-widget-address">
+                                        <a target="_blank" class="text-white" href="https://maps.google.com">
+                                         Teraxo 
+Door No 4,  Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Road, Hulimangala Post, Jigani Hobli, Anekal Taluk, Bengaluru, Karnataka 560105
+                                        </a>
+                                    </div>
+
+                                    <h5 class="rs-footer-widget-title mt-20">Email Address</h5>
+                             
+
+                                    <div class="rs-footer-widget-email">
+                                        <a class="text-white" target="_blank" href="mailto:Business@teraxo.co.in">
+                                         Business@teraxo.co.in
+                                        </a>
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
+                    </div>
+
+                    <!-- CONTACT + SOCIAL -->
+                    <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-4 col-sm-6">
+                        <div class="rs-footer-widget footer-2-col-4">
+                            <h5 class="rs-footer-widget-title">Phone Number</h5>
+
+                            <div class="rs-footer-widget-content">
+                                <div class="rs-footer-widget-contact-info">
+                                    <div class="rs-footer-widget-number">
+                                        <span><a class="text-white" target="_blank" href="tel:+918105077170">+91 81050 77170</a></span>
+                                        <span><a class="text-white" target="_blank" href="tel:+918019186121">+91 80191 86121</a></span>
+                                    </div>
+                                </div>
+
+                                <h5 class="rs-footer-widget-title mt-20">Follow Us</h5>
+
+                                <div class="rs-footer-widget-social">
+                                    <div class="rs-theme-social has-theme-green">
+                                        <a href="https://www.facebook.com/profile.php?id=61572408505004"><i class="ri-facebook-fill"></i></a>
+                                        <a target="_blank" href="https://www.instagram.com/teraxoadhesive?igsh=MWM2ZmJoYThscmg3eg=="><i class="ri-instagram-line"></i></a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/teraxo-adhesive-7701ba347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="ri-linkedin-fill"></i></a>
+                                        <a target="_blank" href="https://youtube.com/@teraxoadhesive?si=sgscILyhuL_CdbCO"><i class="ri-youtube-line"></i></a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div><!-- row end -->
+            </div>
+        </div>
+
+        <!-- COPYRIGHT -->
+        <div class="rs-footer-copyright-area rs-copyright-one has-theme-green">
+           
+
+            <div class="container" style="position: relative; z-index: 2;">
+                <div class="row justify-content-center">
+                    <div class="col-xl-12">
+
+                        <div class="rs-footer-copyright has-theme-green text-center">
+                         <p class="underline">
+    © <span id="year">2025</span> Teraxo Adhesives. All Rights Reserved
+    | Developed by <a href="https://trivlogic.com/" class="text-white">Trivlogic Private Limited</a>
+</p>
+
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
-    </footer>
+
+    </div>
+</footer>
 
     <!-- back to top -->
     <div class="backtotop-wrap cursor-pointer">
