--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -108,7 +108,7 @@
                                
                                 </li>
                                 <li class="">
-                                    <a href="contact.html">Contact</a>
+                                    <a href="/contact">Contact</a>
                                   
                                 </li>
                             </ul>
@@ -119,7 +119,7 @@
                       
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-orange has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-orange has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -208,7 +208,7 @@
                                
                                 </li>
                                 <li >
-                                    <a href="contact.html">Contact</a>
+                                    <a href="/contact">Contact</a>
                                 
                                 </li>
                             </ul>
@@ -219,7 +219,7 @@
                     
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="contact.html">Get In Touch
+                            <a class="rs-btn has-theme-light-green has-icon has-bg" href="/contact">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -411,7 +411,7 @@
                         </div>
                         <div class="rs-contact-content">
                             <h5 class="rs-contact-title" style="color: #1e73be; font-weight: 600; margin-bottom: 10px;">Our Location</h5>
-                            <a href="#" style="color: #333; font-weight: 500;">Teraxo Adhesives, Kochi, Kerala, India</a>
+                            <a href="#" style="color: #333; font-weight: 500;">Teraxo Door No 4, Survey No 310, Ground Floor,  Hulimangala Road, Hulimangala Post, Jigani Hobli, Anekal Taluk, Bengaluru, Karnataka 560105</a>
                         </div>
                     </div>
 
@@ -425,7 +425,7 @@
                         <div class="rs-contact-content">
                             <h5 class="rs-contact-title" style="color: #1e73be; font-weight: 600; margin-bottom: 10px;">Opening Hours</h5>
                             <p style="color: #333; font-weight: 500;">
-                                Mon – Sat: 9:30 AM – 6:30 PM <br>
+                                Mon – Sat: 9:30 AM – 7:30 PM <br>
                                 Sunday: Closed
                             </p>
                         </div>
@@ -440,8 +440,8 @@
                         </div>
                         <div class="rs-contact-content">
                             <h5 class="rs-contact-title" style="color: #1e73be; font-weight: 600; margin-bottom: 10px;">Email Support</h5>
-                            <a href="mailto:support@teraxo.com" style="color: #333; font-weight: 500;">support@teraxo.com</a>
-                            <a href="mailto:info@teraxo.com" style="color: #333; font-weight: 500;">info@teraxo.com</a>
+                            <a href="mailto:Business@teraxo.co.in" style="color: #333; font-weight: 500;">Business@teraxo.co.in</a>
+                        
                         </div>
                     </div>
 
@@ -454,8 +454,8 @@
                         </div>
                         <div class="rs-contact-content">
                             <h5 class="rs-contact-title" style="color: #1e73be; font-weight: 600; margin-bottom: 10px;">Call Us</h5>
-                            <a href="tel:+919562233451" style="color: #333; font-weight: 500;">+91 95622 33451</a>
-                            <a href="tel:+919446889912" style="color: #333; font-weight: 500;">+91 94466 89912</a>
+                            <a href="tel:+918105077170" style="color: #333; font-weight: 500;">+91 81050 77170</a>
+                            <a href="tel:+918019186121" style="color: #333; font-weight: 500;">+91 80191 86121</a>
                         </div>
                     </div>
 
@@ -474,8 +474,7 @@
                     <div class="col-xl-12">
                         <div class="rs-contact-form">
                             <h3 class="rs-contact-form-title">Get in Touch</h3>
-                            <p class="descrip">The point of using Lorem Ipsum is that it has more-or-less packages
-                                normal make a type specimen book it has survived</p>
+                            <p class="descrip">Have a question or need assistance? Reach out to us anytime — we’re here to help and provide the support you need</p>
                             <form id="contact-form" action="https://industrie.rstheme.com/html//mailer.php" method="POST">
                                 <div class="row g-5">
                                     <div class="col-md-4">
@@ -517,7 +516,7 @@
         <div class="rs-map-area rs-map-one pb-10">
             <div class="rs-google-map">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d34214.60083365065!2d-74.01068688015093!3d40.714229226069826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1713786758295!5m2!1sen!2sbd"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.363394725655!2d77.64817959999999!3d12.819778299999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6b7afe1271f5%3A0x374660802b527132!2sTeraxo%20Adhesive!5e0!3m2!1sen!2sin!4v1765436485733!5m2!1sen!2sin"
                     allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
@@ -531,7 +530,7 @@
     <div style="padding-bottom: 0!important;" class="rs-footer-area pb-0 rs-footer-two has-space has-theme-green has-bg-thumb">
 
         <div class="rs-footer-top">
-            <div class="container">
+            <div class="container" style="position: relative; z-index: 2;">
                 <div class="row g-5">
 
                     <!-- ABOUT -->
@@ -563,11 +562,11 @@
                                 <div class="rs-footer-widget-links has-theme-green">
                                     <ul>
                                             <li><a href="/">Home</a></li>
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="products.html">Products</a></li>
+                                        <li><a href="/company_overview">About Us</a></li>
+                                        <li><a href="/products">Products</a></li>
                                         <li><a href="industries.html">Industries</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/blogs">Blog</a></li>
+                                        <li><a href="/contact">Contact</a></li>
                                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                                         <li><a href="terms.html">Terms of Use</a></li>
                                     </ul>
@@ -586,9 +585,8 @@
 
                                     <div class="rs-footer-widget-address">
                                         <a target="_blank" class="text-white" href="https://maps.google.com">
-                                            Teraxo Adhesives<br>
-                                            Chennai, Tamil Nadu<br>
-                                            India
+                                         Teraxo 
+Door No 4,  Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Road, Hulimangala Post, Jigani Hobli, Anekal Taluk, Bengaluru, Karnataka 560105
                                         </a>
                                     </div>
 
@@ -596,8 +594,8 @@
                              
 
                                     <div class="rs-footer-widget-email">
-                                        <a class="text-white" href="mailto:business@teraxo.co.in">
-                                            business@teraxo.co.in
+                                        <a class="text-white" target="_blank" href="mailto:Business@teraxo.co.in">
+                                         Business@teraxo.co.in
                                         </a>
                                     </div>
 
@@ -614,8 +612,8 @@
                             <div class="rs-footer-widget-content">
                                 <div class="rs-footer-widget-contact-info">
                                     <div class="rs-footer-widget-number">
-                                        <span><a class="text-white" href="tel:+919876543210">+91 98765 43210</a></span>
-                                        <span><a class="text-white" href="tel:+919556677889">+91 95566 77889</a></span>
+                                        <span><a class="text-white" target="_blank" href="tel:+918105077170">+91 81050 77170</a></span>
+                                        <span><a class="text-white" target="_blank" href="tel:+918019186121">+91 80191 86121</a></span>
                                     </div>
                                 </div>
 
@@ -623,10 +621,10 @@
 
                                 <div class="rs-footer-widget-social">
                                     <div class="rs-theme-social has-theme-green">
-                                        <a href="#"><i class="ri-facebook-fill"></i></a>
-                                        <a href="#"><i class="ri-instagram-line"></i></a>
-                                        <a href="#"><i class="ri-linkedin-fill"></i></a>
-                                        <a href="#"><i class="ri-youtube-line"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61572408505004"><i class="ri-facebook-fill"></i></a>
+                                        <a target="_blank" href="https://www.instagram.com/teraxoadhesive?igsh=MWM2ZmJoYThscmg3eg=="><i class="ri-instagram-line"></i></a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/teraxo-adhesive-7701ba347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="ri-linkedin-fill"></i></a>
+                                        <a target="_blank" href="https://youtube.com/@teraxoadhesive?si=sgscILyhuL_CdbCO"><i class="ri-youtube-line"></i></a>
                                     </div>
                                 </div>
 
@@ -642,7 +640,7 @@
         <div class="rs-footer-copyright-area rs-copyright-one has-theme-green">
            
 
-            <div class="container">
+            <div class="container" style="position: relative; z-index: 2;">
                 <div class="row justify-content-center">
                     <div class="col-xl-12">
 
