--- a/views/home.ejs
+++ b/views/home.ejs
@@ -120,7 +120,7 @@
                       
                         <!-- search area end -->
                         <div class="rs-header-btn">
-                            <a class="rs-btn has-theme-orange has-icon has-bg" href="/contact">Get In Touch
+                            <a class="rs-btn has-theme-orange has-icon has-bg" href="tel:+918105077170">Get In Touch
                                 <span class="icon-box">
                                     <svg class="icon-first" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
                                         <path
@@ -924,7 +924,7 @@
                         </div>
                 <div class="rs-about-btn">
                                         <a class="rs-btn has-theme-light-green has-icon has-bg"
-                                            href="about.html">Explore More
+                                            href="/company_overview">Explore More
                                             <span class="icon-box">
                                                 <svg class="icon-first" xmlns="http://www.w3.org/2000/svg"
                                                     viewBox="0 0 32 32">
@@ -2024,7 +2024,7 @@
                                 <div class="rs-footer-widget-links has-theme-green">
                                     <ul>
                                             <li><a href="/">Home</a></li>
-                                        <li><a href="about.html">About Us</a></li>
+                                        <li><a href="/company_overview">About Us</a></li>
                                         <li><a href="/products">Products</a></li>
                                         <li><a href="industries.html">Industries</a></li>
                                         <li><a href="/blogs">Blog</a></li>
@@ -2047,9 +2047,8 @@
 
                                     <div class="rs-footer-widget-address">
                                         <a target="_blank" class="text-white" href="https://maps.google.com">
-                                            Teraxo Adhesives<br>
-                                            Chennai, Tamil Nadu<br>
-                                            India
+                                         Teraxo 
+Door No 4,  Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Road, Hulimangala Post, Jigani Hobli, Anekal Taluk, Bengaluru, Karnataka 560105
                                         </a>
                                     </div>
 
@@ -2057,8 +2056,8 @@
                              
 
                                     <div class="rs-footer-widget-email">
-                                        <a class="text-white" href="mailto:business@teraxo.co.in">
-                                            business@teraxo.co.in
+                                        <a class="text-white" target="_blank" href="mailto:Business@teraxo.co.in">
+                                         Business@teraxo.co.in
                                         </a>
                                     </div>
 
@@ -2075,8 +2074,8 @@
                             <div class="rs-footer-widget-content">
                                 <div class="rs-footer-widget-contact-info">
                                     <div class="rs-footer-widget-number">
-                                        <span><a class="text-white" href="tel:+919876543210">+91 98765 43210</a></span>
-                                        <span><a class="text-white" href="tel:+919556677889">+91 95566 77889</a></span>
+                                        <span><a class="text-white" target="_blank" href="tel:+918105077170">+91 81050 77170</a></span>
+                                        <span><a class="text-white" target="_blank" href="tel:+918019186121">+91 80191 86121</a></span>
                                     </div>
                                 </div>
 
@@ -2084,10 +2083,10 @@
 
                                 <div class="rs-footer-widget-social">
                                     <div class="rs-theme-social has-theme-green">
-                                        <a href="#"><i class="ri-facebook-fill"></i></a>
-                                        <a href="#"><i class="ri-instagram-line"></i></a>
-                                        <a href="#"><i class="ri-linkedin-fill"></i></a>
-                                        <a href="#"><i class="ri-youtube-line"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61572408505004"><i class="ri-facebook-fill"></i></a>
+                                        <a target="_blank" href="https://www.instagram.com/teraxoadhesive?igsh=MWM2ZmJoYThscmg3eg=="><i class="ri-instagram-line"></i></a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/teraxo-adhesive-7701ba347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="ri-linkedin-fill"></i></a>
+                                        <a target="_blank" href="https://youtube.com/@teraxoadhesive?si=sgscILyhuL_CdbCO"><i class="ri-youtube-line"></i></a>
                                     </div>
                                 </div>
 
