--- a/views/why-choose.ejs
+++ b/views/why-choose.ejs
@@ -1059,7 +1059,7 @@
     <div style="padding-bottom: 0!important;" class="rs-footer-area pb-0 rs-footer-two has-space has-theme-green has-bg-thumb">
 
         <div class="rs-footer-top">
-            <div class="container">
+            <div class="container" style="position: relative; z-index: 2;">
                 <div class="row g-5">
 
                     <!-- ABOUT -->
@@ -1091,11 +1091,11 @@
                                 <div class="rs-footer-widget-links has-theme-green">
                                     <ul>
                                             <li><a href="/">Home</a></li>
-                                        <li><a href="about.html">About Us</a></li>
-                                        <li><a href="products.html">Products</a></li>
+                                        <li><a href="/company_overview">About Us</a></li>
+                                        <li><a href="/products">Products</a></li>
                                         <li><a href="industries.html">Industries</a></li>
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/blogs">Blog</a></li>
+                                        <li><a href="/contact">Contact</a></li>
                                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                                         <li><a href="terms.html">Terms of Use</a></li>
                                     </ul>
@@ -1114,9 +1114,8 @@
 
                                     <div class="rs-footer-widget-address">
                                         <a target="_blank" class="text-white" href="https://maps.google.com">
-                                            Teraxo Adhesives<br>
-                                            Chennai, Tamil Nadu<br>
-                                            India
+                                         Teraxo 
+Door No 4,  Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Road, Hulimangala Post, Jigani Hobli, Anekal Taluk, Bengaluru, Karnataka 560105
                                         </a>
                                     </div>
 
@@ -1124,8 +1123,8 @@
                              
 
                                     <div class="rs-footer-widget-email">
-                                        <a class="text-white" href="mailto:business@teraxo.co.in">
-                                            business@teraxo.co.in
+                                        <a class="text-white" target="_blank" href="mailto:Business@teraxo.co.in">
+                                         Business@teraxo.co.in
                                         </a>
                                     </div>
 
@@ -1142,8 +1141,8 @@
                             <div class="rs-footer-widget-content">
                                 <div class="rs-footer-widget-contact-info">
                                     <div class="rs-footer-widget-number">
-                                        <span><a class="text-white" href="tel:+919876543210">+91 98765 43210</a></span>
-                                        <span><a class="text-white" href="tel:+919556677889">+91 95566 77889</a></span>
+                                        <span><a class="text-white" target="_blank" href="tel:+918105077170">+91 81050 77170</a></span>
+                                        <span><a class="text-white" target="_blank" href="tel:+918019186121">+91 80191 86121</a></span>
                                     </div>
                                 </div>
 
@@ -1151,10 +1150,10 @@
 
                                 <div class="rs-footer-widget-social">
                                     <div class="rs-theme-social has-theme-green">
-                                        <a href="#"><i class="ri-facebook-fill"></i></a>
-                                        <a href="#"><i class="ri-instagram-line"></i></a>
-                                        <a href="#"><i class="ri-linkedin-fill"></i></a>
-                                        <a href="#"><i class="ri-youtube-line"></i></a>
+                                        <a href="https://www.facebook.com/profile.php?id=61572408505004"><i class="ri-facebook-fill"></i></a>
+                                        <a target="_blank" href="https://www.instagram.com/teraxoadhesive?igsh=MWM2ZmJoYThscmg3eg=="><i class="ri-instagram-line"></i></a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/teraxo-adhesive-7701ba347?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="ri-linkedin-fill"></i></a>
+                                        <a target="_blank" href="https://youtube.com/@teraxoadhesive?si=sgscILyhuL_CdbCO"><i class="ri-youtube-line"></i></a>
                                     </div>
                                 </div>
 
@@ -1170,7 +1169,7 @@
         <div class="rs-footer-copyright-area rs-copyright-one has-theme-green">
            
 
-            <div class="container">
+            <div class="container" style="position: relative; z-index: 2;">
                 <div class="row justify-content-center">
                     <div class="col-xl-12">
 
