--- a/views/industry-automotive.ejs
+++ b/views/industry-automotive.ejs
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/css/vendor/remixicon.css">
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/custom.css">
+    <link rel="stylesheet" href="/css/floating-buttons.css">
 </head>
 
 <body class="rs-smoother-yes rtl">
@@ -1085,5 +1086,6 @@ Door No 4,  Survey No 310, Ground Floor, Opp: Global Furnitures, Hulimangala Roa
     <script src="/js/vendor/purecounter.js"></script>
     <script src="/js/vendor/odometer.min.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/floating-buttons.js"></script>
 </body>
 </html>
